added 1x1 conv to reduct bottleneck size

--- a/experiment_vae.ipynb
+++ b/experiment_vae.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "vital-senior",
+   "id": "jewish-radical",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "intense-somalia",
+   "id": "welcome-manual",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "maritime-unemployment",
+   "id": "gentle-argentina",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "immediate-blogger",
+   "id": "choice-coordination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "emotional-database",
+   "id": "saving-philadelphia",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "discrete-policy",
+   "id": "usual-marriage",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "material-mistress",
+   "id": "handmade-hometown",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "hourly-atlantic",
+   "id": "variable-consensus",
    "metadata": {},
    "outputs": [
     {
@@ -141,17 +141,22 @@
        "    (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "    (2): LeakyReLU(negative_slope=0.2, inplace=True)\n",
        "  )\n",
+       "  (conv5): Sequential(\n",
+       "    (0): Conv2d(64, 10, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "    (1): BatchNorm2d(10, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (2): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+       "  )\n",
        "  (mean): Sequential(\n",
-       "    (0): Linear(in_features=76800, out_features=1000, bias=True)\n",
+       "    (0): Linear(in_features=12000, out_features=1000, bias=True)\n",
        "    (1): Sigmoid()\n",
        "  )\n",
        "  (var): Sequential(\n",
-       "    (0): Linear(in_features=76800, out_features=1000, bias=True)\n",
+       "    (0): Linear(in_features=12000, out_features=1000, bias=True)\n",
        "    (1): Sigmoid()\n",
        "  )\n",
-       "  (linear): Linear(in_features=1000, out_features=76800, bias=True)\n",
+       "  (linear): Linear(in_features=1000, out_features=12000, bias=True)\n",
        "  (deconv1): Sequential(\n",
-       "    (0): ConvTranspose2d(64, 64, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "    (0): ConvTranspose2d(10, 64, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
        "    (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "    (2): ReLU(inplace=True)\n",
        "  )\n",
@@ -161,11 +166,16 @@
        "    (2): ReLU(inplace=True)\n",
        "  )\n",
        "  (deconv3): Sequential(\n",
+       "    (0): ConvTranspose2d(64, 64, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "    (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (2): ReLU(inplace=True)\n",
+       "  )\n",
+       "  (deconv4): Sequential(\n",
        "    (0): ConvTranspose2d(64, 32, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
        "    (1): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "    (2): ReLU(inplace=True)\n",
        "  )\n",
-       "  (deconv4): Sequential(\n",
+       "  (deconv5): Sequential(\n",
        "    (0): ConvTranspose2d(32, 3, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
        "  )\n",
        ")"
@@ -183,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "marine-capability",
+   "id": "rolled-victoria",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "naked-verse",
+   "id": "planned-lodge",
    "metadata": {},
    "outputs": [],
    "source": []
